<resources>
    <string name="app_name">CheckPlease</string>
    <string name="error_title">Ooops My Bad</string>
    <string name="error_msg">There was an error. Please try again.</string>
    <string name="error_ok_btn_text">Mmkay</string>
    <string name="title_activity_story">StoryActivity</string>
    <string name="hint_bill_text">Enter bill total</string>
    <string name="hint_zip_code">Enter Zipcode</string>
    <string name="tip">Tip</string>
    <string name="total">Total</string>
    <string name="bill_error">You did not enter a bill amount</string>
    <string name="tip_error">You didn\'t enter a tip amount!</string>
    <string name="zipcode_error">You didn\'t enter valid 5 digit zipcode</string>
    <string name="initial_bill">Purchase</string>
    <string name="new_bill_label">New Bill</string>
    <string name="value_empty">-</string>
    <string name="start_button_label">Start Adventure</string>
    <string name="hint_tip_percent">Enter Tip Percent</string>
</resources>
